use first command-line argument as port

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ jar {
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    archiveName = 'beholder.jar'
 }
 
 buildscript {
