--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:0.8.+'
     compile 'io.netty:netty-all:4.0.21.Final'
+    compile 'org.reflections:reflections:0.9.8'
 }
 jar {
     manifest {
