Switched from kotlin-jslib to kotlin-js-library, which seems to be the same thing

--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ dependencies {
     compile 'io.netty:netty-all:4.0.21.Final'
 }
 
-clean.dependsOn 'frontend:clean'
+tasks.compileKotlin.dependsOn 'frontend:assemble'
+tasks.clean.dependsOn 'frontend:clean'
 
 jar {
-    dependsOn 'frontend:assemble'
     manifest {
         attributes "Main-Class": 'beholder.backend.BackendPackage'
     }
