--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:0.8.+'
     compile 'io.netty:netty-all:4.0.21.Final'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
 
 tasks.compileKotlin.dependsOn 'frontend:compileJs'
