update to Netty 4.1.+, now ctx.attr() == ctx.channel.attr()

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:0.8.+'
-    compile 'io.netty:netty-all:4.0.21.Final'
+    compile 'io.netty:netty-all:4.1.+'
     compile 'com.google.code.gson:gson:2.2.4'
 }
 
