--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -15,6 +15,8 @@ buildscript {
     }
 }
 
+defaultTasks 'assemble'
+
 tasks.assemble.dependsOn = [] // essentially turning kotlin plugin off
 repositories {
     mavenCentral()
