Parsing config command tree and actually using it

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,10 +1,5 @@
-###
-## конфиг пока что ничего не делает, но надо же что-то парсить
-#
-
 flow {
-    # инструкции применяются по порядку
-    from udp port 3820;
-    convert old-syslog to new-syslog;
-    to tcp "host:1010";
+    from udp 3820;
+    convert uppercase;
+    to stdout;
 }
