Nginx syslog format parsing

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,5 +1,6 @@
 flow {
     from udp 3820;
-    convert uppercase;
-    to stdout;
+    from udp 3821;
+    parse syslog-nginx;
+    to stdout as dump;
 }
