Modern syslog formatter, support for nohostname in syslog-nginx parser

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,6 +1,7 @@
 flow {
     from udp 3820;
     from udp 3821;
-    parse syslog-nginx;
     to stdout as dump;
+    parse syslog-nginx;
+    to stdout as syslog;
 }
