from timer, set, no more formatters in `to`, renamed tags to fields, better help

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,7 +1,7 @@
 flow {
-    from udp 3820;
-    from udp 3821;
-    to stdout as dump;
-    parse syslog-nginx;
-    to stdout as syslog;
+  from timer {set $color 'red'}
+  from timer {set $color 'green'}
+  set $payload 'We got $color apples!';
+  set $payload dump;
+  to stdout;
 }
