--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 group 'ru.agalkin'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 buildscript {
-    ext.kotlin_version = '1.1.61'
+    ext.kotlin_version = '1.2.0'
 
     repositories {
         mavenCentral()
@@ -39,9 +39,10 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    // compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3"
     compile "commons-cli:commons-cli:1.4"
+    compile "org.apache.commons:commons-lang3:3.7"
 }
 
 compileKotlin {
