--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,7 +1,7 @@
 flow {
-  from timer {set $color 'red'}
-  from timer {set $color 'green'}
-  set $payload 'We got $color apples!';
+  from timer {set $opinion ', which is nice'}
+  from timer {set $opinion ', well sheeeeeet!'}
+  set $payload '$payload$opinion';
   set $payload dump;
   to stdout;
 }
