Refactoring, more thread safety

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,7 +1,7 @@
 flow {
-  from timer {set $opinion ', which is nice'}
-  from timer {set $opinion ', well sheeeeeet!'}
+  from timer {set $syslogHost 'example'}
+  from timer {set $syslogHost 'primer'}
   set $payload '$payload$opinion';
-  set $payload dump;
-  to stdout;
+  set $payload syslog;
+  to file build/logs/$syslogHost.log;
 }
