--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -3,5 +3,6 @@ flow {
   from timer {set $syslogHost 'primer'}
   set $payload '$payload$opinion';
   set $payload syslog;
-  to file build/logs/$syslogHost.log;
+  #to file build/logs/$syslogHost.log;
+  to stdout;
 }
