More thread safety, fewer bugs

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,8 +1,7 @@
 flow {
   from timer {set $syslogHost 'example'}
   from timer {set $syslogHost 'primer'}
-  set $payload '$payload$opinion';
-  set $payload syslog;
-  #to file build/logs/$syslogHost.log;
+  #set $payload syslog;
+  to file build/logs/$syslogHost.log;
   to stdout;
 }
