Nested flows, root is a flow too

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,7 +1,3 @@
-flow {
-  from timer {set $syslogHost 'example'}
-  from timer {set $syslogHost 'primer'}
-  #set $payload syslog;
-  to file build/logs/$syslogHost.log;
-  to stdout;
-}
+from timer;
+set $payload '$receivedDate $payload';
+to stdout;
