`parse beholder-stats`

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,3 +1,9 @@
+flow {
+    from timer;
+    parse beholder-stats;
+    to stdout;
+}
+
 from timer;
 set $payload '$receivedDate $payload';
 to stdout;
