--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,6 +1,8 @@
 flow {
     from timer 2 seconds;
     parse beholder-stats;
+    set $curtime time;
+    set $payload '$curtime $payload';
     to stdout;
 }
 
