--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -1,5 +1,27 @@
+# report internal stats to stdout every minute
+flow {
+    from timer 60 seconds;
+    parse beholder-stats;
+    set $curtime time;
+    set $payload '$curtime $payload';
+    to stdout;
+}
+
 flow {
     from udp 3820;
     parse syslog;
-    to stdout as dump;
+    to stdout;
 }
+
+## listen on a UDP port and write every incoming packet as a line into a file
+#flow {
+#    from udp 1234;
+#    to file '/var/log/beholder/from-udp-1234.log';
+#}
+
+## send internal beholder log as syslog over UDP
+#flow {
+#    from internal-log;
+#    set $payload syslog;
+#    to udp 1234;
+#}
