Correctly parsing syslog with multiline payloads

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -19,6 +19,13 @@ flow {
 #    to file '/var/log/beholder/from-udp-1234.log';
 #}
 
+## receive nginx access log over UDP and write it into a file
+#flow {
+#    from udp 3820;
+#    parse syslog;
+#    to file '.../access.log';
+#}
+
 ## send internal beholder log as syslog over UDP
 #flow {
 #    from internal-log;
