--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -6,6 +6,7 @@ flow {
     to stdout;
 }
 
-from timer;
-set $payload '$receivedDate $payload';
-to stdout;
+from udp 3820;
+parse syslog;
+flow { set $payload dump; to stdout; }
+to file '/Users/johnnywoo/IdeaProjects/beholder/build/logs/access.log';
