Removed regexp delimiters other than ~ to prevent pitfalls with literal filenames and such

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -16,7 +16,7 @@ flow {
 ## listen on a UDP port and write every incoming packet as a line into a file
 #flow {
 #    from udp 1234;
-#    to file '/var/log/beholder/from-udp-1234.log';
+#    to file /var/log/beholder/from-udp-1234.log;
 #}
 
 ## receive nginx access log over UDP and write it into a file
