--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -9,4 +9,4 @@ flow {
 from udp 3820;
 parse syslog;
 flow { set $payload dump; to stdout; }
-to file '/Users/johnnywoo/IdeaProjects/beholder/build/logs/access.log';
+to file /Users/johnnywoo/IdeaProjects/beholder/build/logs/access.log;
