--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -6,7 +6,10 @@ flow {
     to stdout;
 }
 
-from udp 3820;
-parse syslog;
-flow { set $payload dump; to stdout; }
-to file /Users/johnnywoo/IdeaProjects/beholder/build/logs/access.log;
+#from udp 3820;
+#parse syslog;
+#flow { set $payload dump; to stdout; }
+#to file /Users/johnnywoo/IdeaProjects/beholder/build/logs/access.log;
+
+from timer;
+to tcp 1212;
