Recipe for syslog-ng over tcp in config for docker

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -32,3 +32,14 @@ flow {
 #    set $payload syslog;
 #    to udp 1234;
 #}
+
+## receive nginx logs by UDP and send them into syslog-ng over TCP
+#flow {
+#    from udp 3820;
+#    parse syslog; # convert bsd-syslog into beholder fields
+#
+#    set $payload syslog; # convert beholder fields into ietf-syslog
+#    set $payload "$payload\n";
+#    set $payload prefix-with-length; # syslog-ng wants the message to be prefixed with its length and a space
+#    to tcp 10.64.1.1:5142;
+#}
