--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     // compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3"
     compile "commons-cli:commons-cli:1.4"
+    compile "com.google.code.gson:gson:2.8.2"
 
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
