`from tcp`: naive implementation

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -5,3 +5,9 @@ flow {
     set $payload '$curtime $payload';
     to stdout;
 }
+
+flow {
+    from tcp 3820;
+    set $payload dump;
+    to stdout;
+}
