Configuration options for buffer sizes, more to follow

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -7,7 +7,8 @@ flow {
 }
 
 flow {
-    from tcp 3820;
-    set $payload dump;
+    from tcp 3821;
     to stdout;
 }
+
+from_tcp_buffer_messages_count 1000;
