--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -43,3 +43,29 @@ flow {
 #    set $payload prefix-with-length; # syslog-ng wants the message to be prefixed with its length and a space
 #    to tcp 10.64.1.1:5142;
 #}
+
+
+
+###
+## SETTINGS
+#
+
+# `from` buffers are used when Beholder cannot process incoming messages quickly enough.
+# These buffers hold incoming messages while Beholder is reloading.
+# Every source has its own buffer; if you are listening on two different TCP ports,
+# Beholder will create a separate buffer for each of those ports.
+
+#from_internal_log_buffer_messages_count 1000;
+#from_tcp_buffer_messages_count 1000;
+#from_udp_buffer_messages_count 1000;
+
+# `to` buffers hold messages to be written to a destination. If a destination cannot accept
+# new data quickly enough, Beholder will put it into a buffer. When the buffer is full,
+# old messages are deleted to make space for new ones.
+# Every destination has its own buffer; if you are writing messages into two different files,
+# Beholder will create a separate buffer for each of those files.
+
+#to_file_buffer_messages_count 1000;
+#to_shell_buffer_messages_count 1000;
+#to_tcp_buffer_messages_count 1000;
+#to_udp_buffer_messages_count 1000;
