Renamed flow variants into separate commands `flow`, `tee` and `join`

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -40,7 +40,7 @@ flow {
 #
 #    set $payload syslog; # convert beholder fields into ietf-syslog
 #    set $payload "$payload\n";
-#    set $payload prefix-with-length; # syslog-ng wants the message to be prefixed with its length and a space
+#    set $payload syslog-frame; # syslog-ng wants the message to be prefixed with its length and a space
 #    to tcp 10.64.1.1:5142;
 #}
 
