`parse each-field-as-message`; improvements in `parse syslog`

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -44,6 +44,20 @@ flow {
 #    to tcp 10.64.1.1:5142;
 #}
 
+## send beholder stats as metrics into InfluxDB
+#flow {
+#    from timer 30 seconds;
+#
+#    parse beholder-stats; # populate the message with stat fields like $uptimeSeconds
+#    parse each-field-as-message; # convert fields to separate messages
+#    switch $value { case ~^[0-9]+$~ {} } # drop messages with non-numeric values like $date
+#
+#    # format the message as line protocol of InfluxDB and send
+#    set $host host;
+#    set $payload 'beholder,host=$host $key=$value';
+#    to udp influx:1234;
+#}
+
 
 
 ###
