More stats, refactoring

--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -2,6 +2,6 @@ flow {
     from timer 2 seconds;
     parse beholder-stats;
     set $curtime time;
-    set $payload '$curtime $payload';
+    set $payload dump;
     to stdout;
 }
