--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -83,3 +83,10 @@ flow {
 #to_shell_buffer_messages_count 1000;
 #to_tcp_buffer_messages_count 1000;
 #to_udp_buffer_messages_count 1000;
+
+# Beholder periodically initiates JVM garbage collection in order to keep memory footprint as low as possible.
+# Because messages are processed using lots of short-lived objects, by default we initiate GC every 5 seconds.
+# This can be changed using `extra_gc_interval_seconds` config option. If you don't want this behaviour,
+# extra GC can be disabled by setting `extra_gc_interval_seconds` to 0.
+
+#extra_gc_interval_seconds 5;
