--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,6 +1,10 @@
 flow {
     from timer 2 seconds;
     parse beholder-stats;
-    set $curtime time;
+    parse each-field-as-message;
+    switch $value { case ~^[0-9]+$~ {} } # drop messages with non-numeric values like $date
+    set $host host;
+    set $nanos time as unixtime-nanoseconds;
+    set $payload 'beholder,host=$host $key=$value $nanos';
     to stdout;
 }
