BeholderQueue will store chunks in a buffer (which does not do anything yet)

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -70,3 +70,7 @@ flow {
 # extra GC can be disabled by setting `extra_gc_interval_seconds` to 0.
 
 #extra_gc_interval_seconds 5;
+
+# Internal buffer options, docs are to be written.
+
+#queue_chunk_messages 500;
