Better name for buffer_memory_bytes

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -74,4 +74,4 @@ flow {
 # Internal buffer options, docs are to be written.
 
 #queue_chunk_messages 500;
-#buffer_size_bytes 128m;
+#buffer_memory_bytes 128m;
