--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -71,7 +71,16 @@ flow {
 
 #extra_gc_interval_seconds 5;
 
-# Internal buffer options, docs are to be written.
+# When messages cannot be processed quick enough, they are stored in queues.
+# When the config is being reloaded, incoming messages are stored in from-queues.
+# When a destination (e.g. a TCP server) is unavailable, outgoing payloads are stored in to-queues.
+#
+# A queue will group messages into chunks. When there are a lot of chunks in a queue, they get stored in a buffer.
+# Currently there is only one buffer for all this data: the default buffer. Default buffer size can be set using
+# `buffer_memory_bytes` option. You can specify a number of bytes or use a suffix: `k`, `m`, `g`.
+#
+# `buffer_memory_bytes` is NOT the total memory limit of Beholder. In addition to unbuffered messages in queues,
+# there are lots of things on JVM that eat bytes. Watch your metrics!
 
-#queue_chunk_messages 500;
 #buffer_memory_bytes 128m;
+#queue_chunk_messages 500;
