Compression of data in queue buffers

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     // compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.2"
     compile "commons-cli:commons-cli:1.4"
     compile "com.google.code.gson:gson:2.8.2"
+    compile "org.lz4:lz4-java:1.4.1"
 
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
