`parse beholder-stats` generates a convenience field $influxLineProtocolPayload

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -1,58 +1,63 @@
-# report internal stats to stdout every minute
-flow {
-    from timer 60 seconds;
-    parse beholder-stats;
-    set $curtime time;
-    set $payload '$curtime $payload';
-    to stdout;
-}
-
 flow {
     from udp 3820;
     parse syslog;
     to stdout;
 }
 
-## listen on a UDP port and write every incoming packet as a line into a file
+## Listen on a UDP port and write every incoming packet as a line into a file
 #flow {
 #    from udp 1234;
 #    to file /var/log/beholder/from-udp-1234.log;
 #}
 
-## receive nginx access log over UDP and write it into a file
+## Receive nginx access log over UDP and write it into a file
 #flow {
 #    from udp 3820;
 #    parse syslog;
 #    to file '.../access.log';
 #}
 
-## send internal beholder log as syslog over UDP
+## Send internal Beholder log as syslog over UDP
 #flow {
 #    from internal-log;
 #    set $payload syslog;
 #    to udp 1234;
 #}
 
-## receive nginx logs by UDP and send them into syslog-ng over TCP
+## Receive nginx logs by UDP and send them into syslog-ng over TCP
 #flow {
 #    from udp 3820;
-#    parse syslog; # convert bsd-syslog into beholder fields
+#    parse syslog; # Convert bsd-syslog into Beholder fields
 #
-#    set $payload syslog; # convert beholder fields into ietf-syslog
+#    set $payload syslog; # Convert Beholder fields into ietf-syslog
 #    set $payload "$payload\n";
 #    set $payload syslog-frame; # syslog-ng wants the message to be prefixed with its length and a space
 #    to tcp 10.64.1.1:5142;
 #}
 
-## send beholder stats as metrics into InfluxDB
+## Send Beholder stats as metrics into InfluxDB (all metrics as one measurement)
 #flow {
 #    from timer 30 seconds;
 #
-#    parse beholder-stats; # populate the message with stat fields like $uptimeSeconds
-#    parse each-field-as-message; # convert fields to separate messages
-#    switch $value { case ~^[0-9]+$~ {} } # drop messages with non-numeric values like $date
+#    # These fields will become tags in Influx (that's how `parse beholder-stats` works)
+#    set $host host;
+#    set $tag value;
+#    keep $host $tag;
 #
-#    # format the message as line protocol of InfluxDB and send
+#    parse beholder-stats;
+#    set $payload $influxLineProtocolPayload;
+#    to udp influx:1234;
+#}
+
+## Send Beholder stats as metrics into InfluxDB (each metric separately)
+#flow {
+#    from timer 30 seconds;
+#
+#    parse beholder-stats; # Populate the message with stat fields like $uptimeSeconds
+#    parse each-field-as-message; # Convert fields to separate messages
+#    switch $value { case ~^[0-9]+$~ {} } # Drop messages with non-numeric values like $date
+#
+#    # Format the message as line protocol of InfluxDB and send
 #    set $host host;
 #    set $payload 'beholder,host=$host $key=$value';
 #    to udp influx:1234;
@@ -88,4 +93,4 @@ flow {
 
 # When a queue chunk is buffered, it is compressed. You can turn off compression with `buffer_compression off`.
 
-#buffer_compression lz4-fast; # one of: lz4-fast, off
+#buffer_compression lz4-fast; # One of: lz4-fast, off
