`switch` with no `default` not passes messages through instead of dropping

--- a/docker/beholder.conf
+++ b/docker/beholder.conf
@@ -55,7 +55,7 @@ flow {
 #
 #    parse beholder-stats; # Populate the message with stat fields like $uptimeSeconds
 #    parse each-field-as-message; # Convert fields to separate messages
-#    switch $value { case ~^[0-9]+$~ {} } # Drop messages with non-numeric values like $date
+#    switch $value { case ~^[0-9]+$~ {} default {drop} } # Drop messages with non-numeric values like $date
 #
 #    # Format the message as line protocol of InfluxDB and send
 #    set $host host;
