--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'ru.agalkin'
 version '0.1'
 
 buildscript {
-    ext.kotlin_version = '1.2.70'
+    ext.kotlin_version = '1.2.71'
 
     repositories {
         mavenCentral()
@@ -38,7 +38,10 @@ dependencies {
     compile "com.google.code.gson:gson:2.8.2"
     compile "org.lz4:lz4-java:1.4.1"
 
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit5:$kotlin_version"
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
 }
 
 compileKotlin {
